# rock-band-drums

./: CMakeLists.txt  README.md  config.json
app/: CMakeLists.txt  app.cpp
doc/: ClassDiagramConcept.wsd  UseCase.wsd  build_and_run.md  controllers.md  recording.md  testPreview.wsd
images/cymbal/: 320px-Bellotti_Cymbal.jfif  LICENSE.txt
images/hihat/: LICENSE.txt
images/kick/: LICENSE.txt
images/snare/: LICENSE.txt
images/tom/: LICENSE.txt
include/: algebra.hpp  config_file.hpp  drum.hpp  lib.hpp  timer.hpp  title.hpp  util.hpp
sounds/: LICENSE.txt
src/: CMakeLists.txt  config.cpp  config_file.cpp  lib.cpp  util.cpp
tests/: CMakeLists.txt  temporary_file.cpp  temporary_file.hpp  test_config_file.cpp  test_lib.cpp  test_util.cpp  testlib.cpp
